--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pokedex">
         <activity
-            android:name="com.rafaelboban.pokedex.MainActivity"
+            android:name="com.rafaelboban.pokedex.ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
