--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-beta01"
+        classpath "com.android.tools.build:gradle:7.0.0-beta02"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.35.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
