--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     implementation "androidx.sqlite:sqlite-framework:2.1.0"
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
+    kapt "org.xerial:sqlite-jdbc:3.34.0"
+    kapt "androidx.room:room-compiler:2.3.0"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
