--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pokedex">
         <activity
-            android:name="com.rafaelboban.pokedex.ui.MainActivity"
+            android:name=".ui.InfoActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Pokedex.PokemonActivity"/>
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
