--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pokedex">
         <activity
-            android:name=".ui.InfoActivity"
+            android:name=".ui.AboutActivity"
             android:exported="true"
             android:theme="@style/Theme.Pokedex.PokemonActivity"/>
         <activity
