--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-beta02"
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.35.1'
     }
