--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.35.1"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+    // ProgressBar
+    implementation "com.github.skydoves:progressview:1.1.1"
 }
