--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pokedex">
         <activity
+            android:name=".ui.TypeActivity"
+            android:exported="true"
+            android:label="@string/title_activity_type"
+            android:theme="@style/Theme.Pokedex.NoActionBar" />
+        <activity
             android:name=".ui.PokemonActivity"
             android:exported="true"
             android:theme="@style/Theme.Pokedex.PokemonActivity" />
